# RAG-Assignment

./: README.md  main.py  pyproject.toml  requirements.txt
app/: embeddings.py  ingest.py  main.py  query.py  utils.py  vector_store.py
data/faiss_index/: meta.pkl
frontend/: streamlit_app.py
